--- a/index.html
+++ b/index.html
@@ -1,1 +1,174 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE-edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pizza | Shop</title>
+
+    <!-- icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/styles.css">
+
+</head>
+<body>
+    <header class="content">
+        <div class="logo">
+            <img src="img/pizzaicon.png" alt="logopizza">
+            <h3>Pizza Shop</h3>
+            <nav>
+                <ul class="list-menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="#">Cardápios</a></li>
+                    <li><a href="#">Contatos</a></li>
+                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                    <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                    <li><a href="#"><i class="bi bi-cart"></i></a></li>
+                </ul>
+            </nav>
+
+            <div class="menu-toggle">
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
+            </div>
+        </div>
+    </header>
+
+    <section class="first-section">
+        <div class="conteudo-principal">
+            <h1>Deixe seu dia mais Saboroso!!!</h1>
+            <h2>As Pizzas Mais Recheadas da Região!!!</h2>
+            <div class="btn">
+                <button class="reservar">Reserve a sua!</button>
+                <button class="montar">Montar a sua pizza</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="sobre-nos" id="sobrenos">
+        <div class="main">
+            <div class="contentsobre">
+                <h2>Sobre Nós</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit vitae enim quae, eaque ut perferendis quidem, maxime nihil amet dicta cum officia doloremque soluta ex molestiae, voluptate praesentium ducimus corporis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque provident, quod sunt atque quos est doloremque inventore similique at sint magnam ullam saepe ab adipisci. Neque architecto cum doloribus eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor molestiae, officia cum corporis voluptatem itaque iusto, adipisci, atque unde vero eveniet minus dolore. Consequatur numquam harum accusamus nesciunt id ipsa! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi non ex aperiam fugit porro! Consequuntur et laudantium aliquam, maxime qui expedita ullam magnam, a quas facilis nihil quisquam ipsum consectetur?</p>
+            </div>
+            <div class="imagecozinha">
+                <img src="img/cozinha.jpg" alt="imagem de uma cozinha">
+            </div>
+        </div>
+    </section>
+
+    <section class="cardapio" id="cardapio">
+        <h2>Cardápios</h2>
+        <div class="itens-cardapio">
+            <div class="frango">
+                <img src="img/pizza4.png" alt="">
+                <div class="info">
+                    <h3>Frango</h3>
+                    <h4>6 Fatias <span>R$35,00</span></h4>
+                    <h4>8 Fatias <span>R$45,00</span></h4>
+                    <h4>12 Fatias <span>R$55,00</span></h4>
+                    <button class="pedir">Pedir Agora</button>
+                </div>
+            </div>
+            <div class="calabresa">
+                <img src="img/pizza1.png" alt="">
+                <div class="info">
+                    <h3>Calabresa</h3>
+                    <h4>6 Fatias <span>R$35,00</span></h4>
+                    <h4>8 Fatias <span>R$45,00</span></h4>
+                    <h4>12 Fatias <span>R$55,00</span></h4>
+                    <button class="pedir">Pedir Agora</button>
+                </div>
+            </div>
+            <div class="Tomate">
+                <img src="img/pizza2.png" alt="">
+                <div class="info">
+                    <h3>Tomate</h3>
+                    <h4>6 Fatias <span>R$35,00</span></h4>
+                    <h4>8 Fatias <span>R$45,00</span></h4>
+                    <h4>12 Fatias <span>R$55,00</span></h4>
+                    <button class="pedir">Pedir Agora</button>
+                </div>
+            </div>
+            <div class="Confete">
+                <img src="img/pizza3.png" alt="">
+                <div class="info">
+                    <h3>Confete</h3>
+                    <h4>6 Fatias <span>R$35,00</span></h4>
+                    <h4>8 Fatias <span>R$45,00</span></h4>
+                    <h4>12 Fatias <span>R$55,00</span></h4>
+                    <button class="pedir">Pedir Agora</button>
+                </div>
+            </div>
+            <div class="Moda da casa">
+                <img src="img/pizza5.png" alt="">
+                <div class="info">
+                    <h3>Moda da Casa</h3>
+                    <h4>6 Fatias <span>R$35,00</span></h4>
+                    <h4>8 Fatias <span>R$45,00</span></h4>
+                    <h4>12 Fatias <span>R$55,00</span></h4>
+                    <button class="pedir">Pedir Agora</button>
+                </div>
+            </div>
+            <div class="Chocolate">
+                <img src="img/pizza6.png" alt="">
+                <div class="info">
+                    <h3>Chocolate</h3>
+                    <h4>6 Fatias <span>R$35,00</span></h4>
+                    <h4>8 Fatias <span>R$45,00</span></h4>
+                    <h4>12 Fatias <span>R$55,00</span></h4>
+                    <button class="pedir">Pedir Agora</button>
+                </div>
+            </div>
+            <div class="Morango">
+                <img src="img/pizza7.png" alt="">
+                <div class="info">
+                    <h3>Morango</h3>
+                    <h4>6 Fatias <span>R$35,00</span></h4>
+                    <h4>8 Fatias <span>R$45,00</span></h4>
+                    <h4>12 Fatias <span>R$55,00</span></h4>
+                    <button class="pedir">Pedir Agora</button>
+                </div>
+            </div>
+            <div class="Strogonoff">
+                <img src="img/pizza8.png" alt="">
+                <div class="info">
+                    <h3>Strogonoff</h3>
+                    <h4>6 Fatias <span>R$35,00</span></h4>
+                    <h4>8 Fatias <span>R$45,00</span></h4>
+                    <h4>12 Fatias <span>R$55,00</span></h4>
+                    <button class="pedir">Pedir Agora</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contatos" id="contatos">
+        <h3>contatos</h3>
+        <div class="contatos-secao">
+            <div>
+                <ic class="bi bi-telephone"></i>
+                    <span>(41) 99860-4133</span>
+            </div>
+            <div>
+                <ic class="bi bi-facebook"></i>
+                    <span>@pizzaria_qualquer</span>
+            </div>
+            <div>
+                <ic class="bi bi-instagram"></i>
+                    <span>PizzariaQualquer</span>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <h4>Modelado por -> Roberto Novak</h4>
+    </footer>
+
+    <script src="script.js/script.js"></script>
+</body>
+</html>
